@@ -1,6 +1,8 @@
 List of features / changes made / release notes, in reverse chronological order.
 If not stated, FINUFFT is assumed (cuFINUFFT <=1.3 is listed separately).
 
+* cufinufft now supports modeord(type 1,2 only): 0 CMCL-style increasing mode
+  order, 1 FFT-style mode order.
 * CPU plan stage prevents now caps # threads at omp_get_max_threads (being 1
   for single-thread build); warns if this cap was activated (PR 431)
 * new docs troubleshooting accuracy limitations due to condition number of the
